--- a/src/main/resources/nginx/proxy.conf
+++ b/src/main/resources/nginx/proxy.conf
@@ -1,5 +1,12 @@
+upstream courses {
+    server courses.a:8080;
+    server courses.b:8080;
+}
+
 server {
     location / {
-        proxy_pass http://courses:8080/;
+        proxy_pass http://courses/;
+
+        add_header X-From $upstream_addr
     }
 }
