--- a/src/main/resources/nginx/proxy.conf
+++ b/src/main/resources/nginx/proxy.conf
@@ -7,6 +7,6 @@ server {
     location / {
         proxy_pass http://courses/;
 
-        add_header X-From $upstream_addr
+        add_header X-From $upstream_addr;
     }
 }
