Add ssl and http2 support

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,9 +30,10 @@ services:
   proxy:
     image: nginx:alpine
     ports:
-    - "8080:80"
+    - "8080:443"
     volumes:
     - ./src/main/resources/nginx/:/etc/nginx/conf.d/
+    - ./src/main/resources/ssl/:/etc/nginx/ssl/
     depends_on:
     - courses.a
     - courses.b
