--- a/src/main/resources/nginx/proxy.conf
+++ b/src/main/resources/nginx/proxy.conf
@@ -1,12 +1,34 @@
-upstream courses {
-    server courses.a:8080;
-    server courses.b:8080;
-}
+upstream blue {
+     server courses.a:8080 weight=2;
+     server courses.b:8080;
+ }
+
+ upstream green {
+     server courses.a:8080 weight=2;
+     server courses.b:8080;
+ }
+
+
+# server {
+#    listen 80 default;
+#
+#     return 301 https://$NGINX_HOST:$NGINX_HTTPS_PORT$request_uri;
+#}
 
 server {
+
+    listen 443 ssl http2;
+
+    ssl_certificate /etc/nginx/ssl/cert.crt;
+    ssl_certificate_key /etc/nginx/ssl/cert.key;
+
     location / {
-        proxy_pass http://courses/;
+        proxy_pass http://blue/;
 
         add_header X-From $upstream_addr;
+
+        gzip on;
+        gzip_types application/json text/html;
+        gzip_min_length 100;
     }
 }
